--- a/index.html
+++ b/index.html
@@ -38,47 +38,47 @@
 					<li>
 						<div><i class="fa-solid fa-angle-left"></i>فاریاب</div>
 						<ul class="vertical-navbar-items">
-							<li><a href="packages.html" >میمنه</a></li>
-							<li><a href="packages.html" >اندخوی</a></li>
-							<li><a href="packages.html" >شیرین تگاب</a></li>
-							<li><a href="packages.html" >کولیان</a></li>
+							<li><a href="packages.html">میمنه</a></li>
+							<li><a href="packages.html">اندخوی</a></li>
+							<li><a href="packages.html">شیرین تگاب</a></li>
+							<li><a href="packages.html">کولیان</a></li>
 						</ul>
 					</li>
 					<li>
 						<div><i class="fa-solid fa-angle-left"></i>جوزجان</div>
 						<ul class="vertical-navbar-items">
-							<li><a href="packages.html" >شبرغان</a></li>
-							<li><a href="packages.html" >آقچه</a></li>
-							<li><a href="packages.html" >فیض آباد</a></li>
-							<li><a href="packages.html" >خواجه دوه کوه</a></li>
-							<li><a href="packages.html" >درزآب</a></li>
-							<li><a href="packages.html" >قوش تپه</a></li>
+							<li><a href="packages.html">شبرغان</a></li>
+							<li><a href="packages.html">آقچه</a></li>
+							<li><a href="packages.html">فیض آباد</a></li>
+							<li><a href="packages.html">خواجه دوه کوه</a></li>
+							<li><a href="packages.html">درزآب</a></li>
+							<li><a href="packages.html">قوش تپه</a></li>
 						</ul>
 					</li>
 					<li>
 						<div><i class="fa-solid fa-angle-left"></i>سمنگان</div>
 						<ul class="vertical-navbar-items">
-							<li><a href="packages.html" >ایبک</a></li>
-							<li><a href="packages.html" >خرم</a></li>
-							<li><a href="packages.html" >سارباغ</a></li>
-							<li><a href="packages.html" > دره صوف بالا</a></li>
+							<li><a href="packages.html">ایبک</a></li>
+							<li><a href="packages.html">خرم</a></li>
+							<li><a href="packages.html">سارباغ</a></li>
+							<li><a href="packages.html"> دره صوف بالا</a></li>
 						</ul>
 					</li>
 					<li>
 						<div><i class="fa-solid fa-angle-left"></i>بلخ</div>
 						<ul class="vertical-navbar-items">
-							<li><a href="packages.html" >مزارشریف</a></li>
-							<li><a href="packages.html" >بلخ</a></li>
-							<li><a href="packages.html" >کود برق</a></li>
+							<li><a href="packages.html">مزارشریف</a></li>
+							<li><a href="packages.html">بلخ</a></li>
+							<li><a href="packages.html">کود برق</a></li>
 						</ul>
 					</li>
 					<li>
 						<div><i class="fa-solid fa-angle-left"></i>سرپل</div>
 						<ul class="vertical-navbar-items">
-							<li><a href="packages.html" >سرپل</a></li>
-							<li><a href="packages.html" >سانچارک</a></li>
-							<li><a href="packages.html" >گوسفندی</a></li>
-							<li><a href="packages.html" >بلخاب</a></li>
+							<li><a href="packages.html">سرپل</a></li>
+							<li><a href="packages.html">سانچارک</a></li>
+							<li><a href="packages.html">گوسفندی</a></li>
+							<li><a href="packages.html">بلخاب</a></li>
 						</ul>
 					</li>
 				</ul>
@@ -88,7 +88,7 @@
 
 		</ul>
 	</nav>
-	
+
 	<section class="overlay"></section>
 	<nav class="sidebar">
 		<div class="sidebar-profile">
@@ -199,132 +199,32 @@
 			<h1>خدمات ما</h1>
 		</div>
 		<div class="service-items">
-			<div class="service-card">
-					<div class="service-card-top-shape">
-						<div class="service-card-top-right-shape"></div>
-						<div class="service-card-top-left-shape"></div>
-						<h4>مایکروویو</h4>
-					</div>
-					<div class="service-icon">
-						<i class="fa-solid fa-tower-cell"></i>
-					</div>
-					<div class="service-description">
-						<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
-					</div>
-					<div class="service-card-bottom-shape">
-						<div class="service-card-bottom-shape-inner"></div>
-					</div>
-				</div>
-			
-			<div class="service-card">
-					<div class="service-card-top-shape">
-						<div class="service-card-top-right-shape"></div>
-						<div class="service-card-top-left-shape"></div>
-						<h4>ویست</h4>
-					</div>
-					<div class="service-icon">
-						<i class="fa-solid fa-satellite-dish"></i>
-					</div>
-					<div class="service-description">
-						<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
-					</div>
-					<div class="service-card-bottom-shape">
-						<div class="service-card-bottom-shape-inner"></div>
-					</div>
-				</div>
-			
-			<div class="service-card">
-					<div class="service-card-top-shape">
-						<div class="service-card-top-right-shape"></div>
-						<div class="service-card-top-left-shape"></div>
-						<h4>وایرلس</h4>
-					</div>
-					<div class="service-icon">
-						<i class="fa-solid fa-signal-stream"></i>
-					</div>
-					<div class="service-description">
-						<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
-					</div>
-					<div class="service-card-bottom-shape">
-						<div class="service-card-bottom-shape-inner"></div>
-					</div>
-				</div>
-			
-			<div class="service-card">
-					<div class="service-card-top-shape">
-						<div class="service-card-top-right-shape"></div>
-						<div class="service-card-top-left-shape"></div>
-						<h4>تجهیزات<br><span>امنیتی</span></h4>
-					</div>
-					<div class="service-icon">
-						<i class="fa-solid fa-fingerprint"></i>
-					</div>
-					<div class="service-description">
-						<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
-					</div>
-					<div class="service-card-bottom-shape">
-						<div class="service-card-bottom-shape-inner"></div>
-					</div>
-				</div>
-			
-			<div class="service-card">
-					<div class="service-card-top-shape">
-						<div class="service-card-top-right-shape"></div>
-						<div class="service-card-top-left-shape"></div>
-						<h4>کمره های<br><span>امنیتی</span></h4>
-					</div>
-					<div class="service-icon">
-						<i class="fa-solid fa-camera-cctv"></i>
-					</div>
-					<div class="service-description">
-						<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
-					</div>
-					<div class="service-card-bottom-shape">
-						<div class="service-card-bottom-shape-inner"></div>
-					</div>
-				</div>
-			
-			<div class="service-card">
-					<div class="service-card-top-shape">
-						<div class="service-card-top-right-shape"></div>
-						<div class="service-card-top-left-shape"></div>
-						<h4>شبکه سازی</h4>
-					</div>
-					<div class="service-icon">
-						<i class="fa-solid fa-network-wired"></i>
-					</div>
-					<div class="service-description">
-						<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
-					</div>
-					<div class="service-card-bottom-shape">
-						<div class="service-card-bottom-shape-inner"></div>
-					</div>
-				</div>
-			</div>
+
+		</div>
 
 	</div>
 
 
-	<div class="about_us section"  id="aboutUs">
+	<div class="about_us section" id="aboutUs">
 		<h1>در باره ما</h1>
 		<div class="tabs">
 			<input type="radio" name="slider" id="history" checked>
 			<input type="radio" name="slider" id="achievement">
 			<input type="radio" name="slider" id="license">
 			<div class="tab_box">
-			  <div class="slider"></div>
-			  <label for="history" class="tab_btn">
-				تاریخچه
-			  </label>
-			  <label for="achievement" class="tab_btn">
-				دستاوردها
-			  </label>
-			  <label for="license" class="tab_btn">
-				مجوز ها
-			  </label>
+				<div class="slider"></div>
+				<label for="history" class="tab_btn">
+					تاریخچه
+				</label>
+				<label for="achievement" class="tab_btn">
+					دستاوردها
+				</label>
+				<label for="license" class="tab_btn">
+					مجوز ها
+				</label>
 			</div>
 
-		  </div>
+		</div>
 
 		<div class="content_box">
 			<div class="content active">
@@ -523,8 +423,8 @@
 
 		tabs.forEach((tab, index) => {
 			tab.addEventListener('click', (e) => {
-				all_content.forEach(content => {content.classList.remove('active')});
-                all_content[index].classList.add("active");
+				all_content.forEach(content => { content.classList.remove('active') });
+				all_content[index].classList.add("active");
 			});
 		})
 
@@ -532,66 +432,132 @@
 	</script>
 
 
-<script defer>
+	<script defer>
 
 
 
-const links = document.querySelectorAll(".section-links");
-  
-  links.forEach((link) => {
-	  link.addEventListener("click", (e) =>{
-		  e.preventDefault();
-		  document.querySelector(e.target.hash).scrollIntoView({
-			  behavior: "smooth"
-		  })
-	  });
-  })
+		const links = document.querySelectorAll(".section-links");
+
+		links.forEach((link) => {
+			link.addEventListener("click", (e) => {
+				e.preventDefault();
+				document.querySelector(e.target.hash).scrollIntoView({
+					behavior: "smooth"
+				})
+			});
+		})
 
 
 
 
 
-const sections = document.querySelectorAll('.section');
-let current = '';
-let activeTagStatus = true;
+		const sections = document.querySelectorAll('.section');
+		let current = '';
+		let activeTagStatus = true;
 
-function setActiveLink() {
-
-
-	const activeNavbarLink = document.querySelector(`.navbar-items > li:has( > a) > a[href*='${current}']`);
-	const activeSidbarLink = document.querySelector(`.menu > .menu-item > a[href*='${current}']`);
-
-	if(!activeNavbarLink.classList.contains('active') && !activeSidbarLink.classList.contains('active')){
-		links.forEach(link => {
-			link.classList.remove("active");
-    	});
-		activeNavbarLink.classList.add('active');
-		activeSidbarLink.classList.add('active');
-	}
-
-}
-
-function updateCurrentSection() {
-    sections.forEach((section, index) => {
-        const sectionTop = section.offsetTop;
-        if (index === 0 && scrollY >= sectionTop) {
-            current = section.getAttribute('id');
-        } else if (index === 1 && scrollY >= sectionTop - 60) {
-            current = section.getAttribute('id');
-        } else if (index === 2 && scrollY >= sectionTop - 110) {
-            current = section.getAttribute('id');
-        } else if (index === 3 && scrollY >= sectionTop - 120) {
-            current = section.getAttribute('id');
-        }
-    });
-    setActiveLink();
-}
-
-window.addEventListener('scroll', updateCurrentSection);
+		function setActiveLink() {
 
 
+			const activeNavbarLink = document.querySelector(`.navbar-items > li:has( > a) > a[href*='${current}']`);
+			const activeSidbarLink = document.querySelector(`.menu > .menu-item > a[href*='${current}']`);
 
-</script>
+			if (!activeNavbarLink.classList.contains('active') && !activeSidbarLink.classList.contains('active')) {
+				links.forEach(link => {
+					link.classList.remove("active");
+				});
+				activeNavbarLink.classList.add('active');
+				activeSidbarLink.classList.add('active');
+			}
+
+		}
+
+		function updateCurrentSection() {
+			sections.forEach((section, index) => {
+				const sectionTop = section.offsetTop;
+				if (index === 0 && scrollY >= sectionTop) {
+					current = section.getAttribute('id');
+				} else if (index === 1 && scrollY >= sectionTop - 60) {
+					current = section.getAttribute('id');
+				} else if (index === 2 && scrollY >= sectionTop - 110) {
+					current = section.getAttribute('id');
+				} else if (index === 3 && scrollY >= sectionTop - 120) {
+					current = section.getAttribute('id');
+				}
+			});
+			setActiveLink();
+		}
+
+		window.addEventListener('scroll', updateCurrentSection);
+
+
+
+
+		let service_items = [
+
+			{
+				title: "<h4>وایرلس</h4>",
+				icon: "fa-signal-stream",
+				description: "لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است."
+			},
+			{
+				title: "<h4>ویست</h4>",
+				icon: "fa-satellite-dish",
+				description: "لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است."
+			},
+			{
+				title: "<h4>مایکروویو</h4>",
+				icon: "fa-tower-cell",
+				description: "لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است."
+			},
+			{
+				title: "<h4>شبکه سازی</h4>",
+				icon: "fa-network-wired",
+				description: "لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است."
+			},
+
+			{
+				title: "<h4>کمره های<br><span>امنیتی</span></h4>",
+				icon: "fa-camera-cctv",
+				description: "لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است."
+			},
+			{
+				title: "<h4>تجهیزات<br><span>امنیتی</span></h4>",
+				icon: "fa-fingerprint",
+				description: "لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است."
+			},
+			
+			
+		];
+
+
+		for (let i = 0; i < service_items.length; i++) {
+
+			document.querySelector(".service-items").innerHTML += `
+		<div class="service-card">
+				<div class="service-card-top-shape">
+					<div class="service-card-top-inner-shape">
+						<div class="service-card-top-right-shape"></div>
+						<div class="service-card-top-left-shape"></div>
+						${service_items[i].title}
+					</div>
+				</div>
+				<div class="service-icon">
+					<i class="fa-solid ${service_items[i].icon}"></i>
+				</div>
+				<div class="service-description">
+					<p>${service_items[i].description}</p>
+				</div>
+				<div class="service-card-bottom-shape">
+					<div class="service-card-bottom-shape-inner"></div>
+				</div>
+			</div>
+		`;
+		}
+
+
+
+
+	</script>
 
 </body>
 
