--- a/index.html
+++ b/index.html
@@ -89,80 +89,81 @@
 		</ul>
 	</nav>
 
-	<section class="overlay"></section>
-	<nav class="sidebar">
-		<div class="sidebar-profile">
-			<i class="fa-light fa-xmark fa-2x  navCloseBtn"></i>
-			<img src="assets/images/profile.png" alt="">
-		</div>
-
-		<div class="sidebar-content">
-			<ul class="menu">
-				<li class="menu-item"><a class="section-links active" href="#home">صفحه اصلی</a></li>
-				<li class="menu-item"><a class="section-links" href="#services">خدمات ما</a></li>
-				<li class="menu-item">
-					<div><i class="fa-solid fa-plus"></i><span>نمایندگی ها</span></div>
-					<ul class="sub-menu">
-
-						<li class="sub-menu-item">
-							<div class="province"><i class="fa-solid fa-angle-left"></i> <span>فاریاب</span></div>
-							<ul class="districts">
-								<li class="district"><a href="packages.html">میمنه</a></li>
-								<li class="district"><a href="packages.html">اندخوی</a></li>
-								<li class="district"><a href="packages.html">شیرین تگاب</a></li>
-								<li class="district"><a href="packages.html">کولیان</a></li>
-							</ul>
-						</li>
-
-						<li class="sub-menu-item">
-							<div class="province"><i class="fa-solid fa-angle-left"></i> <span>سمنگان</span></div>
-							<ul class="districts">
-								<li class="district"><a href="packages.html">آیبک</a></li>
-								<li class="district"><a href="packages.html">خرم</a></li>
-								<li class="district"><a href="packages.html">سارباغ</a></li>
-							</ul>
-						</li>
-
-						<li class="sub-menu-item">
-							<div class="province"><i class="fa-solid fa-angle-left"></i> <span>جوزجان</span></div>
-							<ul class="districts">
-								<li class="district"><a href="packages.html">شبرغان</a></li>
-								<li class="district"><a href="packages.html">آقچه</a></li>
-								<li class="district"><a href="packages.html">فیض آباد</a></li>
-								<li class="district"><a href="packages.html">خواجه دوه کوه</a></li>
-								<li class="district"><a href="packages.html">درزآب</a></li>
-								<li class="district"><a href="packages.html">قوش تپه</a></li>
-							</ul>
-						</li>
-
-
-
-						<li class="sub-menu-item">
-							<div class="province"><i class="fa-solid fa-angle-left"></i> <span>بلخ</span></div>
-							<ul class="districts">
-								<li class="district"><a href="packages.html">مزارشریف</a></li>
-								<li class="district"><a href="packages.html">بلخ</a></li>
-								<li class="district"><a href="packages.html">کود برق</a></li>
-							</ul>
-						</li>
-
-						<li class="sub-menu-item">
-							<div class="province"><i class="fa-solid fa-angle-left"></i> <span>سرپل</span></div>
-							<ul class="districts">
-								<li class="district"><a href="packages.html">سرپل</a></li>
-								<li class="district"><a href="packages.html">سانچارک</a></li>
-								<li class="district"><a href="packages.html">گوسفندی</a></li>
-								<li class="district"><a href="packages.html">بلخاب</a></li>
-							</ul>
-						</li>
-
-					</ul>
-				</li>
-				<li class="menu-item"><a class="section-links" href="#aboutUs">درباره ما</a></li>
-				<li class="menu-item"><a class="section-links" href="#offer">ارتباط با ما</a></li>
-			</ul>
-		</div>
-	</nav>
+	<!-- <section class="overlay"></section> -->
+	<div class="sidebar-modal">
+		<nav class="sidebar">
+			<div class="sidebar-profile">
+				<i class="fa-light fa-xmark fa-2x  navCloseBtn"></i>
+				<img src="assets/images/profile.png" alt="">
+			</div>
+			<div class="sidebar-content">
+				<ul class="menu">
+					<li class="menu-item"><a class="section-links active" href="#home">صفحه اصلی</a></li>
+					<li class="menu-item"><a class="section-links" href="#services">خدمات ما</a></li>
+					<li class="menu-item">
+						<div><i class="fa-solid fa-plus"></i><span>نمایندگی ها</span></div>
+						<ul class="sub-menu">
+	
+							<li class="sub-menu-item">
+								<div class="province"><i class="fa-solid fa-angle-left"></i> <span>فاریاب</span></div>
+								<ul class="districts">
+									<li class="district"><a href="packages.html">میمنه</a></li>
+									<li class="district"><a href="packages.html">اندخوی</a></li>
+									<li class="district"><a href="packages.html">شیرین تگاب</a></li>
+									<li class="district"><a href="packages.html">کولیان</a></li>
+								</ul>
+							</li>
+	
+							<li class="sub-menu-item">
+								<div class="province"><i class="fa-solid fa-angle-left"></i> <span>سمنگان</span></div>
+								<ul class="districts">
+									<li class="district"><a href="packages.html">آیبک</a></li>
+									<li class="district"><a href="packages.html">خرم</a></li>
+									<li class="district"><a href="packages.html">سارباغ</a></li>
+								</ul>
+							</li>
+	
+							<li class="sub-menu-item">
+								<div class="province"><i class="fa-solid fa-angle-left"></i> <span>جوزجان</span></div>
+								<ul class="districts">
+									<li class="district"><a href="packages.html">شبرغان</a></li>
+									<li class="district"><a href="packages.html">آقچه</a></li>
+									<li class="district"><a href="packages.html">فیض آباد</a></li>
+									<li class="district"><a href="packages.html">خواجه دوه کوه</a></li>
+									<li class="district"><a href="packages.html">درزآب</a></li>
+									<li class="district"><a href="packages.html">قوش تپه</a></li>
+								</ul>
+							</li>
+	
+	
+	
+							<li class="sub-menu-item">
+								<div class="province"><i class="fa-solid fa-angle-left"></i> <span>بلخ</span></div>
+								<ul class="districts">
+									<li class="district"><a href="packages.html">مزارشریف</a></li>
+									<li class="district"><a href="packages.html">بلخ</a></li>
+									<li class="district"><a href="packages.html">کود برق</a></li>
+								</ul>
+							</li>
+	
+							<li class="sub-menu-item">
+								<div class="province"><i class="fa-solid fa-angle-left"></i> <span>سرپل</span></div>
+								<ul class="districts">
+									<li class="district"><a href="packages.html">سرپل</a></li>
+									<li class="district"><a href="packages.html">سانچارک</a></li>
+									<li class="district"><a href="packages.html">گوسفندی</a></li>
+									<li class="district"><a href="packages.html">بلخاب</a></li>
+								</ul>
+							</li>
+	
+						</ul>
+					</li>
+					<li class="menu-item"><a class="section-links" href="#aboutUs">درباره ما</a></li>
+					<li class="menu-item"><a class="section-links" href="#offer">ارتباط با ما</a></li>
+				</ul>
+			</div>
+		</nav>
+	</div>
 
 	<div class="slider">
 		<!-- fade css -->
@@ -401,6 +402,7 @@
 	<script src="script/jsfile.js"></script>
 	<script src="./script/navbar.js" defer></script>
 
+
 	<script>
 		const slider = document.querySelector('.slider');
 		const cards = document.querySelector('.slide-img');
@@ -433,9 +435,6 @@
 
 
 	<script defer>
-
-
-
 
 		let service_items = [
 
