--- a/packages.html
+++ b/packages.html
@@ -84,8 +84,8 @@
 
 		</ul>
 	</nav>
-	
-	<section class="overlay"></section>
+
+	<div class="sidebar-modal">
 	<nav class="sidebar">
 		<div class="sidebar-profile">
 			<i class="fa-light fa-xmark fa-2x  navCloseBtn"></i>
@@ -159,7 +159,7 @@
 			</ul>
 		</div>
 	</nav>
-
+</div>
 
 
 	<div class="packages">
