--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 <body>
 
 	<div class="languages section" id="home">
-		<a href="">English</a>
-		<a href="">دری</a>
+		<a href=""  draggable="false">English</a>
+		<a href=""  draggable="false">دری</a>
 	</div>
 
 	<nav class="navbar">
-		<a href=""><img src="assets/images/logo.png" alt="" class="logo" width="80"></a>
+		<a href=""  draggable="false"><img src="assets/images/logo.png" alt="" class="logo" width="80"  draggable="false"></a>
 		<i class="fa-light fa-bars fa-2x navOpenBtn "></i>
 		<ul class="navbar-items">
-			<li><a class="section-links" href="#offer">ارتباط با ما</a></li>
-			<li><a class="section-links" href="#aboutUs">درباره ما</a></li>
+			<li><a class="section-links" href="#offer" draggable="false">ارتباط با ما</a></li>
+			<li><a class="section-links" href="#aboutUs" draggable="false">درباره ما</a></li>
 			<li>
 				<div>
 					<p><i class="fa-solid fa-angle-left"></i>نمایندگی ها</p>
@@ -38,53 +38,53 @@
 					<li>
 						<div><i class="fa-solid fa-angle-left"></i>فاریاب</div>
 						<ul class="vertical-navbar-items">
-							<li><a href="packages.html">میمنه</a></li>
-							<li><a href="packages.html">اندخوی</a></li>
-							<li><a href="packages.html">شیرین تگاب</a></li>
-							<li><a href="packages.html">کولیان</a></li>
+							<li><a href="packages.html" draggable="false">میمنه</a></li>
+							<li><a href="packages.html" draggable="false">اندخوی</a></li>
+							<li><a href="packages.html" draggable="false">شیرین تگاب</a></li>
+							<li><a href="packages.html" draggable="false">کولیان</a></li>
 						</ul>
 					</li>
 					<li>
 						<div><i class="fa-solid fa-angle-left"></i>جوزجان</div>
 						<ul class="vertical-navbar-items">
-							<li><a href="packages.html">شبرغان</a></li>
-							<li><a href="packages.html">آقچه</a></li>
-							<li><a href="packages.html">فیض آباد</a></li>
-							<li><a href="packages.html">خواجه دوه کوه</a></li>
-							<li><a href="packages.html">درزآب</a></li>
-							<li><a href="packages.html">قوش تپه</a></li>
+							<li><a href="packages.html" draggable="false">شبرغان</a></li>
+							<li><a href="packages.html" draggable="false">آقچه</a></li>
+							<li><a href="packages.html" draggable="false">فیض آباد</a></li>
+							<li><a href="packages.html" draggable="false">خواجه دوه کوه</a></li>
+							<li><a href="packages.html" draggable="false">درزآب</a></li>
+							<li><a href="packages.html" draggable="false">قوش تپه</a></li>
 						</ul>
 					</li>
 					<li>
 						<div><i class="fa-solid fa-angle-left"></i>سمنگان</div>
 						<ul class="vertical-navbar-items">
-							<li><a href="packages.html">ایبک</a></li>
-							<li><a href="packages.html">خرم</a></li>
-							<li><a href="packages.html">سارباغ</a></li>
-							<li><a href="packages.html"> دره صوف بالا</a></li>
+							<li><a href="packages.html" draggable="false">ایبک</a></li>
+							<li><a href="packages.html" draggable="false">خرم</a></li>
+							<li><a href="packages.html" draggable="false">سارباغ</a></li>
+							<li><a href="packages.html" draggable="false"> دره صوف بالا</a></li>
 						</ul>
 					</li>
 					<li>
 						<div><i class="fa-solid fa-angle-left"></i>بلخ</div>
 						<ul class="vertical-navbar-items">
-							<li><a href="packages.html">مزارشریف</a></li>
-							<li><a href="packages.html">بلخ</a></li>
-							<li><a href="packages.html">کود برق</a></li>
+							<li><a href="packages.html" draggable="false">مزارشریف</a></li>
+							<li><a href="packages.html" draggable="false">بلخ</a></li>
+							<li><a href="packages.html" draggable="false">کود برق</a></li>
 						</ul>
 					</li>
 					<li>
 						<div><i class="fa-solid fa-angle-left"></i>سرپل</div>
 						<ul class="vertical-navbar-items">
-							<li><a href="packages.html">سرپل</a></li>
-							<li><a href="packages.html">سانچارک</a></li>
-							<li><a href="packages.html">گوسفندی</a></li>
-							<li><a href="packages.html">بلخاب</a></li>
+							<li><a href="packages.html" draggable="false">سرپل</a></li>
+							<li><a href="packages.html" draggable="false">سانچارک</a></li>
+							<li><a href="packages.html" draggable="false">گوسفندی</a></li>
+							<li><a href="packages.html" draggable="false">بلخاب</a></li>
 						</ul>
 					</li>
 				</ul>
 			</li>
-			<li><a class="section-links" href="#services">خدمات ما</a></li>
-			<li><a class="section-links active" href="#home">صفحه اصلی</a></li>
+			<li><a class="section-links" href="#services" draggable="false">خدمات ما</a></li>
+			<li><a class="section-links active" href="#home"draggable="false">صفحه اصلی</a></li>
 
 		</ul>
 	</nav>
@@ -94,12 +94,12 @@
 		<nav class="sidebar">
 			<div class="sidebar-profile">
 				<i class="fa-light fa-xmark fa-2x  navCloseBtn"></i>
-				<img src="assets/images/profile.png" alt="">
+				<img src="assets/images/profile.png" alt="" draggable="false">
 			</div>
 			<div class="sidebar-content">
 				<ul class="menu">
-					<li class="menu-item"><a class="section-links active" href="#home">صفحه اصلی</a></li>
-					<li class="menu-item"><a class="section-links" href="#services">خدمات ما</a></li>
+					<li class="menu-item"><a class="section-links active" href="#home"  draggable="false">صفحه اصلی</a></li>
+					<li class="menu-item"><a class="section-links" href="#services"  draggable="false">خدمات ما</a></li>
 					<li class="menu-item">
 						<div><i class="fa-solid fa-plus"></i><span>نمایندگی ها</span></div>
 						<ul class="sub-menu">
@@ -107,31 +107,31 @@
 							<li class="sub-menu-item">
 								<div class="province"><i class="fa-solid fa-angle-left"></i> <span>فاریاب</span></div>
 								<ul class="districts">
-									<li class="district"><a href="packages.html">میمنه</a></li>
-									<li class="district"><a href="packages.html">اندخوی</a></li>
-									<li class="district"><a href="packages.html">شیرین تگاب</a></li>
-									<li class="district"><a href="packages.html">کولیان</a></li>
+									<li class="district"><a href="packages.html" draggable="false">میمنه</a></li>
+									<li class="district"><a href="packages.html" draggable="false">اندخوی</a></li>
+									<li class="district"><a href="packages.html" draggable="false">شیرین تگاب</a></li>
+									<li class="district"><a href="packages.html" draggable="false">کولیان</a></li>
 								</ul>
 							</li>
 	
 							<li class="sub-menu-item">
 								<div class="province"><i class="fa-solid fa-angle-left"></i> <span>سمنگان</span></div>
 								<ul class="districts">
-									<li class="district"><a href="packages.html">آیبک</a></li>
-									<li class="district"><a href="packages.html">خرم</a></li>
-									<li class="district"><a href="packages.html">سارباغ</a></li>
+									<li class="district"><a href="packages.html" draggable="false">آیبک</a></li>
+									<li class="district"><a href="packages.html" draggable="false">خرم</a></li>
+									<li class="district"><a href="packages.html" draggable="false">سارباغ</a></li>
 								</ul>
 							</li>
 	
 							<li class="sub-menu-item">
 								<div class="province"><i class="fa-solid fa-angle-left"></i> <span>جوزجان</span></div>
 								<ul class="districts">
-									<li class="district"><a href="packages.html">شبرغان</a></li>
-									<li class="district"><a href="packages.html">آقچه</a></li>
-									<li class="district"><a href="packages.html">فیض آباد</a></li>
-									<li class="district"><a href="packages.html">خواجه دوه کوه</a></li>
-									<li class="district"><a href="packages.html">درزآب</a></li>
-									<li class="district"><a href="packages.html">قوش تپه</a></li>
+									<li class="district"><a href="packages.html" draggable="false">شبرغان</a></li>
+									<li class="district"><a href="packages.html" draggable="false">آقچه</a></li>
+									<li class="district"><a href="packages.html" draggable="false">فیض آباد</a></li>
+									<li class="district"><a href="packages.html" draggable="false">خواجه دوه کوه</a></li>
+									<li class="district"><a href="packages.html" draggable="false">درزآب</a></li>
+									<li class="district"><a href="packages.html" draggable="false">قوش تپه</a></li>
 								</ul>
 							</li>
 	
@@ -140,26 +140,26 @@
 							<li class="sub-menu-item">
 								<div class="province"><i class="fa-solid fa-angle-left"></i> <span>بلخ</span></div>
 								<ul class="districts">
-									<li class="district"><a href="packages.html">مزارشریف</a></li>
-									<li class="district"><a href="packages.html">بلخ</a></li>
-									<li class="district"><a href="packages.html">کود برق</a></li>
+									<li class="district"><a href="packages.html" draggable="false">مزارشریف</a></li>
+									<li class="district"><a href="packages.html" draggable="false">بلخ</a></li>
+									<li class="district"><a href="packages.html" draggable="false">کود برق</a></li>
 								</ul>
 							</li>
 	
 							<li class="sub-menu-item">
 								<div class="province"><i class="fa-solid fa-angle-left"></i> <span>سرپل</span></div>
 								<ul class="districts">
-									<li class="district"><a href="packages.html">سرپل</a></li>
-									<li class="district"><a href="packages.html">سانچارک</a></li>
-									<li class="district"><a href="packages.html">گوسفندی</a></li>
-									<li class="district"><a href="packages.html">بلخاب</a></li>
+									<li class="district"><a href="packages.html" draggable="false">سرپل</a></li>
+									<li class="district"><a href="packages.html" draggable="false">سانچارک</a></li>
+									<li class="district"><a href="packages.html" draggable="false">گوسفندی</a></li>
+									<li class="district"><a href="packages.html" draggable="false">بلخاب</a></li>
 								</ul>
 							</li>
 	
 						</ul>
 					</li>
-					<li class="menu-item"><a class="section-links" href="#aboutUs">درباره ما</a></li>
-					<li class="menu-item"><a class="section-links" href="#offer">ارتباط با ما</a></li>
+					<li class="menu-item"><a class="section-links" href="#aboutUs" draggable="false">درباره ما</a></li>
+					<li class="menu-item"><a class="section-links" href="#offer" draggable="false">ارتباط با ما</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -168,19 +168,19 @@
 	<div class="slider">
 		<!-- fade css -->
 		<div class="slide-img fade">
-			<img src="assets/images/image1.jpg" style="width: 100%; height: 100%;">
+			<img src="assets/images/image1.jpg" style="width: 100%; height: 100%;" draggable="false">
 		</div>
 
 		<div class="slide-img fade">
-			<img src="assets/images/image4.jpg" style="width: 100%; height: 100%;">
+			<img src="assets/images/image4.jpg" style="width: 100%; height: 100%;"  draggable="false">
 		</div>
 
 		<div class="slide-img fade">
-			<img src="assets/images/image1.jpg" style="width: 100%; height: 100%;">
+			<img src="assets/images/image1.jpg" style="width: 100%; height: 100%;"  draggable="false">
 		</div>
 
 		<div class="slide-img fade">
-			<img src="assets/images/image4.jpg" style="width: 100%; height: 100%;">
+			<img src="assets/images/image4.jpg" style="width: 100%; height: 100%;"  draggable="false">
 		</div>
 		<!-- onclick js -->
 		<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
