--- a/index.html
+++ b/index.html
@@ -6,26 +6,30 @@
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
 	<title>Yarqin Mirzad</title>
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
+
+	<link rel="stylesheet" href="style/loading.css">
 	<link rel="stylesheet" href="style/nav.css">
 	<link rel="stylesheet" href="style/style.css">
 	<link rel="stylesheet" href="style/footer.css">
 	<link rel="stylesheet" href="assets/FontAwesome.Pro.6.4.2/css/all.css" />
-	<script>
-		window.onload = function () {
-			document.body.style.visibility = "visible";
-		};
-	</script>
+
+
+
 </head>
 
 <body>
 
+	<div class="loading-container">
+		<img src="assets/images/loading.gif" alt="" id="icon-loader" class="icon-loader-hidden" draggable="false">
+	</div>
 	<div class="languages section" id="home">
-		<a href=""  draggable="false">English</a>
-		<a href=""  draggable="false">دری</a>
+		<a href="" draggable="false">English</a>
+		<a href="" draggable="false">دری</a>
 	</div>
 
 	<nav class="navbar">
-		<a href=""  draggable="false"><img src="assets/images/logo.png" alt="" class="logo" width="80"  draggable="false"></a>
+		<a href="" draggable="false"><img src="assets/images/logo.png" alt="" class="logo" width="80"
+				draggable="false"></a>
 		<i class="fa-light fa-bars fa-2x navOpenBtn "></i>
 		<ul class="navbar-items">
 			<li><a class="section-links" href="#offer" draggable="false">ارتباط با ما</a></li>
@@ -84,7 +88,7 @@
 				</ul>
 			</li>
 			<li><a class="section-links" href="#services" draggable="false">خدمات ما</a></li>
-			<li><a class="section-links active" href="#home"draggable="false">صفحه اصلی</a></li>
+			<li><a class="section-links active" href="#home" draggable="false">صفحه اصلی</a></li>
 
 		</ul>
 	</nav>
@@ -98,12 +102,13 @@
 			</div>
 			<div class="sidebar-content">
 				<ul class="menu">
-					<li class="menu-item"><a class="section-links active" href="#home"  draggable="false">صفحه اصلی</a></li>
-					<li class="menu-item"><a class="section-links" href="#services"  draggable="false">خدمات ما</a></li>
+					<li class="menu-item"><a class="section-links active" href="#home" draggable="false">صفحه اصلی</a>
+					</li>
+					<li class="menu-item"><a class="section-links" href="#services" draggable="false">خدمات ما</a></li>
 					<li class="menu-item">
 						<div><i class="fa-solid fa-plus"></i><span>نمایندگی ها</span></div>
 						<ul class="sub-menu">
-	
+
 							<li class="sub-menu-item">
 								<div class="province"><i class="fa-solid fa-angle-left"></i> <span>فاریاب</span></div>
 								<ul class="districts">
@@ -113,7 +118,7 @@
 									<li class="district"><a href="packages.html" draggable="false">کولیان</a></li>
 								</ul>
 							</li>
-	
+
 							<li class="sub-menu-item">
 								<div class="province"><i class="fa-solid fa-angle-left"></i> <span>سمنگان</span></div>
 								<ul class="districts">
@@ -122,21 +127,22 @@
 									<li class="district"><a href="packages.html" draggable="false">سارباغ</a></li>
 								</ul>
 							</li>
-	
+
 							<li class="sub-menu-item">
 								<div class="province"><i class="fa-solid fa-angle-left"></i> <span>جوزجان</span></div>
 								<ul class="districts">
 									<li class="district"><a href="packages.html" draggable="false">شبرغان</a></li>
 									<li class="district"><a href="packages.html" draggable="false">آقچه</a></li>
 									<li class="district"><a href="packages.html" draggable="false">فیض آباد</a></li>
-									<li class="district"><a href="packages.html" draggable="false">خواجه دوه کوه</a></li>
+									<li class="district"><a href="packages.html" draggable="false">خواجه دوه کوه</a>
+									</li>
 									<li class="district"><a href="packages.html" draggable="false">درزآب</a></li>
 									<li class="district"><a href="packages.html" draggable="false">قوش تپه</a></li>
 								</ul>
 							</li>
-	
-	
-	
+
+
+
 							<li class="sub-menu-item">
 								<div class="province"><i class="fa-solid fa-angle-left"></i> <span>بلخ</span></div>
 								<ul class="districts">
@@ -145,7 +151,7 @@
 									<li class="district"><a href="packages.html" draggable="false">کود برق</a></li>
 								</ul>
 							</li>
-	
+
 							<li class="sub-menu-item">
 								<div class="province"><i class="fa-solid fa-angle-left"></i> <span>سرپل</span></div>
 								<ul class="districts">
@@ -155,7 +161,7 @@
 									<li class="district"><a href="packages.html" draggable="false">بلخاب</a></li>
 								</ul>
 							</li>
-	
+
 						</ul>
 					</li>
 					<li class="menu-item"><a class="section-links" href="#aboutUs" draggable="false">درباره ما</a></li>
@@ -172,15 +178,15 @@
 		</div>
 
 		<div class="slide-img fade">
-			<img src="assets/images/image4.jpg" style="width: 100%; height: 100%;"  draggable="false">
+			<img src="assets/images/image4.jpg" style="width: 100%; height: 100%;" draggable="false">
 		</div>
 
 		<div class="slide-img fade">
-			<img src="assets/images/image1.jpg" style="width: 100%; height: 100%;"  draggable="false">
+			<img src="assets/images/image1.jpg" style="width: 100%; height: 100%;" draggable="false">
 		</div>
 
 		<div class="slide-img fade">
-			<img src="assets/images/image4.jpg" style="width: 100%; height: 100%;"  draggable="false">
+			<img src="assets/images/image4.jpg" style="width: 100%; height: 100%;" draggable="false">
 		</div>
 		<!-- onclick js -->
 		<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -399,6 +405,32 @@
 		</div>
 	</div>
 
+
+	<script>
+		//Icon Loader Scripts
+
+
+		let iconLoader = document.getElementById('icon-loader');
+
+		iconLoader.onload = function () {
+			iconLoader.classList.remove('icon-loader-hidden');
+
+		};
+
+		if (iconLoader.complete) {
+			iconLoader.onload();
+		}
+
+		window.addEventListener('load', function () {
+
+			const loadingContainer = document.querySelector('.loading-container');
+			loadingContainer.style.display = 'none';
+			document.body.style.overflow = "auto";
+
+		});
+
+	</script>
+
 	<script src="script/jsfile.js"></script>
 	<script src="./script/navbar.js" defer></script>
 
@@ -435,6 +467,12 @@
 
 
 	<script defer>
+
+
+
+
+
+
 
 		let service_items = [
 
@@ -526,7 +564,7 @@
 			const activeSidbarLink = document.querySelector(`.menu > .menu-item > a[href*='${current}']`);
 
 			if (!activeNavbarLink.classList.contains('active') && !activeSidbarLink.classList.contains('active')) {
-			
+
 				links.forEach(link => {
 					link.classList.remove("active");
 				});
