--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet" href="style/footer.css" />
     <link rel="stylesheet" href="assets/FontAwesome.Pro.6.4.2/css/all.css" />
+    <link rel="stylesheet" href="style/icon.css">
   </head>
 
   <body>
@@ -36,7 +37,7 @@
           width="80"
           draggable="false"
       /></a>
-      <i class="fa-light fa-bars fa-2x navOpenBtn"></i>
+      <span class="navOpenBtn icon-bars"></span>
       <ul class="navbar-items">
         <li>
           <a class="section-links" href="#offer" draggable="false"
@@ -124,7 +125,7 @@
     <div class="sidebar-modal">
       <nav class="sidebar">
         <div class="sidebar-profile">
-          <i class="fa-light fa-xmark fa-2x navCloseBtn"></i>
+          <span class="icon-xmark navCloseBtn"></span>
           <img src="assets/images/profile.png" alt="" draggable="false" />
         </div>
         <div class="sidebar-content">
@@ -518,7 +519,7 @@
       </div>
     </div>
 
-    <div class="move-top"><i class="fa-regular fa-arrow-up"></i></div>
+    <div class="move-top"><span class="icon-arrow-up"></span></div>
 
     <script>
       //Icon Loader Scripts
